# friendly-meme

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development-guide.md  usage.md
pali_translator/: __init__.py  __main__.py  cli.py  lexicon.py  phrases.py  py.typed  translator.py
pali_translator/gui/: __init__.py  __main__.py  app.py  compare.py  concordance.py  controller.py  export.py  history.py  interlinear.py  notes.py  settings.py  widgets.py
tests/: support.py  test_cli.py  test_compare.py  test_concordance.py  test_export.py  test_filter.py  test_gui_controller.py  test_history.py  test_interlinear.py  test_lexicon.py  test_notes.py  test_phrases.py  test_settings.py  test_translator.py
