[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pali-translator"
version = "0.3.0"
description = "Lexicon-governed Pāli translator: desktop GUI, CLI, and Python library backed by the shiny-adventure term policy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
# No third-party runtime dependencies — stdlib only (Tkinter is part of the
# standard library on most platforms; see docs/usage.md for platform notes).
dependencies = []
keywords = ["pali", "translation", "lexicon", "cli", "gui", "philology", "buddhism"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Religion",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[project.optional-dependencies]
# No test or dev dependencies beyond the standard library are currently needed.
# This section is reserved for future additions (e.g. linters, type checkers).
dev = []

[project.scripts]
# CLI entry point — unchanged from 0.1.x.
pali-translator = "pali_translator.cli:main"
# GUI entry point — launches the Tkinter desktop workbench.
pali-translator-gui = "pali_translator.gui.__main__:main"

[project.urls]
"Homepage"    = "https://github.com/timedrapery/friendly-meme"
"Bug Tracker" = "https://github.com/timedrapery/friendly-meme/issues"
"Data Source" = "https://github.com/timedrapery/shiny-adventure"
"Documentation" = "https://github.com/timedrapery/friendly-meme/blob/main/docs/usage.md"
"Changelog" = "https://github.com/timedrapery/friendly-meme/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
# Auto-discover the pali_translator package; exclude tests from the wheel.
where   = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
pali_translator = ["py.typed"]
